fix: remove overflow hidden in new example

--- a/examples/map-3d-routes-widget/src/app.css
+++ b/examples/map-3d-routes-widget/src/app.css
@@ -6,5 +6,4 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
